--- a/components/page-sidebar/assets/styles/sidebar.scss
+++ b/components/page-sidebar/assets/styles/sidebar.scss
@@ -7,13 +7,16 @@
 // *****************************************************************************
 
 .#{$c-sidebar} {
+  @include rem(padding, 20px);
   width: 100%;
   margin: 0;
-  background-color: $color-sidebar-bg;
 
   @include medium {
+    // pad to give us a gutter (various brand elements)
+    padding-top: 160px;
+    display: table-cell;
     width: 30%;
+    vertical-align: top;
+    background-color: $color-sidebar-bg;
   }
-
 }
-
