--- a/components/site-logo/assets/styles/site-logo.scss
+++ b/components/site-logo/assets/styles/site-logo.scss
@@ -15,7 +15,6 @@
   width: 30px;
   height: 30px;
   transform: perspective( $small-default-perspective ) rotateY( -15deg );
-  transition: $animation-speed-slow;
   transform-origin: 20% 0;
   pointer-events: all;
   background-image: url('../images/logo.svg');
